feat: Refactor CameraActivity to use ActivityResultLauncher for image preview
- Replaced deprecated startActivityForResult with ActivityResultLauncher in CameraActivity.
- Extracted output file options creation into a separate method for better readability.
- Added new ImagePreviewActivity to confirm or retake the captured image.
- Updated layout for CameraActivity to improve UI design.

feat: Enhance ImagePreviewActivity for image confirmation and retake functionality

- Implemented image preview functionality with options to confirm or retake the photo.
- Added buttons for retaking and confirming the image with appropriate actions.

feat: Update MainActivity layout and integrate system window insets

- Adjusted MainActivity to fit system windows for better UI compatibility.

feat: Introduce AppConstants for managing slot times and WiFi validation

- Added SLOT_TIMES map to manage class slot timings.
- Introduced constants for enabling smart WiFi validation and testing mode.

style: Create drawable resources for buttons and icons

- Added custom drawable resources for attendance button and capture button.
- Created icons for logout and WiFi status with appropriate colors.

fix: Update layout files for improved UI and accessibility

- Modified activity_camera.xml and activity_image_preview.xml for better layout structure.
- Enhanced fragment_attendance.xml with scrollable content and fixed logout button.

chore: Update color and string resources for better maintainability

- Added new color definitions for attendance-related UI elements.
- Expanded string resources for accessibility and user guidance.

chore: Update dependencies in libs.versions.toml

- Updated Glide and Firebase In-App Messaging dependencies for improved functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,21 @@
     <string name="attendance_error">Lỗi: %1$s</string>
     <string name="attendance_connect_to_wifi">Vui lòng kết nối đúng WiFi của lớp học.</string>
     <string name="attendance_select_slot">Vui lòng chọn ca học.</string>
+    <string name="attendance_button_text">Mở Camera và Điểm Danh</string>
+    <string name="attendance_already_attended">Đã điểm danh hôm nay</string>
+    <string name="wifi_icon">Wifi icon</string>
+
+    <!-- Accessibility descriptions -->
+    <string name="accessibility_slot_selector">Chọn ca học để điểm danh</string>
+    <string name="accessibility_attendance_button">Nút mở camera để điểm danh</string>
+    <string name="accessibility_progress_loading">Đang xử lý điểm danh</string>
+    <string name="accessibility_wifi_status">Biểu tượng trạng thái WiFi</string>
+    <string name="attend">Điểm danh</string>
+    <string name="capture_photo">Capture photo</string>
+    <string name="preview_image">Preview image</string>
+    <string name="capture_again">Chụp lại</string>
+    <string name="confirm">Xác nhận</string>
+    <string name="logout">Đăng xuất</string>
+    <string name="logout_confirmation">Bạn có chắc chắn muốn đăng xuất?</string>
+    <string name="cancel">Hủy</string>
 </resources>
